--- a/Ticketing/API/Ticketing.API/Ticketing.API.csproj
+++ b/Ticketing/API/Ticketing.API/Ticketing.API.csproj
@@ -18,4 +18,24 @@
     <ProjectReference Include="..\..\Infrastructure\Ticketing.Infrastructure\Ticketing.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="obj\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Remove="obj\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="obj\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="obj\**" />
+  </ItemGroup>
+
 </Project>
