--- a/Ticketing/Infrastructure/Ticketing.Infrastructure/Ticketing.Infrastructure.csproj
+++ b/Ticketing/Infrastructure/Ticketing.Infrastructure/Ticketing.Infrastructure.csproj
@@ -4,6 +4,18 @@
     <ProjectReference Include="..\..\Core\Ticketing.Application\Ticketing.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="obj\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Remove="obj\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="obj\**" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
