Working Courses Graphql with SQLite DB

--- a/Ticketing/API/Ticketing.GraphQL.Web/Ticketing.GraphQL.Web.csproj
+++ b/Ticketing/API/Ticketing.GraphQL.Web/Ticketing.GraphQL.Web.csproj
@@ -8,9 +8,20 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Bogus" Version="35.4.0" />
         <PackageReference Include="HotChocolate.AspNetCore" Version="14.0.0-p.29" />
+        <PackageReference Include="HotChocolate.Data.EntityFramework" Version="14.0.0-p.29" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.1">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Migrations\" />
     </ItemGroup>
 
 </Project>
