--- a/Ticketing/API/Ticketing2.GraphQL.Web/Ticketing2.GraphQL.Web.csproj
+++ b/Ticketing/API/Ticketing2.GraphQL.Web/Ticketing2.GraphQL.Web.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="Bogus" Version="35.4.0" />
         <PackageReference Include="HotChocolate.AspNetCore" Version="14.0.0-p.29" />
         <PackageReference Include="HotChocolate.Data.EntityFramework" Version="14.0.0-p.29" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.1">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
