--- a/Ticketing/API/Ticketing2.GraphQL.Web/Ticketing2.GraphQL.Web.csproj
+++ b/Ticketing/API/Ticketing2.GraphQL.Web/Ticketing2.GraphQL.Web.csproj
@@ -10,7 +10,10 @@
     <ItemGroup>
         <PackageReference Include="Bogus" Version="35.4.0" />
         <PackageReference Include="HotChocolate.AspNetCore" Version="14.0.0-p.29" />
+        <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="14.0.0-p.29" />
         <PackageReference Include="HotChocolate.Data.EntityFramework" Version="14.0.0-p.29" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.1">
             <PrivateAssets>all</PrivateAssets>
