--- a/Ticketing/API/Ticketing2.GraphQL.Web/appsettings.json
+++ b/Ticketing/API/Ticketing2.GraphQL.Web/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "default": "Data Source=ticketing.db"
+  },
+  "Jwt": {
+    "Issuer": "https://joydipkanjilal.com/",
+    "Audience": "https://joydipkanjilal.com/",
+    "Key": "This is a sample secret key - please don't use in production environment.'"
   }
 }
