CreateVeranstaler returns jwt token.

--- a/Ticketing/API/Ticketing2.GraphQL.Web/appsettings.json
+++ b/Ticketing/API/Ticketing2.GraphQL.Web/appsettings.json
@@ -10,8 +10,8 @@
     "default": "Data Source=ticketing.db"
   },
   "Jwt": {
-    "Issuer": "https://joydipkanjilal.com/",
-    "Audience": "https://joydipkanjilal.com/",
-    "Key": "This is a sample secret key - please don't use in production environment.'"
+    "Issuer": "https://ticketing.classencode.com/",
+    "Audience": "https://ticketing.classencode.com/",
+    "Key": "This is a sample key for ticketing app.asdlkjflaksdjflkasdfasdfasdf"
   }
 }
