--- a/Ticketing/API/Ticketing2.GraphQL.Web/Ticketing2.GraphQL.Web.csproj
+++ b/Ticketing/API/Ticketing2.GraphQL.Web/Ticketing2.GraphQL.Web.csproj
@@ -8,9 +8,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="HotChocolate.AspNetCore" Version="14.0.0-p.42" />
-        <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="14.0.0-p.42" />
-        <PackageReference Include="HotChocolate.Data.EntityFramework" Version="14.0.0-p.42" />
+        <PackageReference Include="HotChocolate.AspNetCore" Version="13.9.0" />
+        <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="13.9.0" />
+        <PackageReference Include="HotChocolate.Data.EntityFramework" Version="13.9.0" />
+        <PackageReference Include="HotChocolate.Types.Scalars" Version="13.9.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.2" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.2" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
