--- a/Ticketing/API/Ticketing.GraphQL.Web/Ticketing.GraphQL.Web.csproj
+++ b/Ticketing/API/Ticketing.GraphQL.Web/Ticketing.GraphQL.Web.csproj
@@ -21,6 +21,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.2" />
+        <PackageReference Include="Stripe.net" Version="43.16.0" />
     </ItemGroup>
 
 </Project>
