--- a/Ticketing/API/Ticketing.GraphQL.Web/Ticketing.GraphQL.Web.csproj
+++ b/Ticketing/API/Ticketing.GraphQL.Web/Ticketing.GraphQL.Web.csproj
@@ -13,6 +13,7 @@
         <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="13.9.0" />
         <PackageReference Include="HotChocolate.Data.EntityFramework" Version="13.9.0" />
         <PackageReference Include="HotChocolate.Types.Scalars" Version="13.9.0" />
+        <PackageReference Include="Kralizek.Extensions.Configuration.AWSSecretsManager" Version="1.7.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.2" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.2" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
