--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -32,6 +32,7 @@
     "@ngx-formly/material": "^6.2.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "apollo-angular": "^6.0.0",
     "moment": "^2.29.4",
     "ng-matero": "^17.0.2",
     "ngx-permissions": "^16.0.1",
@@ -41,7 +42,9 @@
     "rxjs": "~7.8.0",
     "screenfull": "^6.0.2",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "~0.14.3",
+    "@apollo/client": "^3.0.0",
+    "graphql": "^16"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.2.2",
