apollo graphql funktioniert noch nicht. Ich komme hier nicht weiter. Ich kann noch keine query ausführen.

--- a/Frontend/graphql.config.yml
+++ b/Frontend/graphql.config.yml
@@ -1,6 +1,6 @@
 projects:
   Ticketing:
-    schema: ./myGraphQLSchema/schema.ticketing.graphql
+    schema: ./schema.ticketing.graphql
     include: '**/*.graphql'
     extensions:
       endpoints:
