--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "generate": "graphql-codegen",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -26,6 +27,7 @@
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "@apollo/client": "^3.0.0",
     "@ng-matero/extensions": "^17.1.2",
     "@ng-matero/extensions-moment-adapter": "^17.1.2",
     "@ngx-formly/core": "^6.2.0",
@@ -33,6 +35,7 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "apollo-angular": "^6.0.0",
+    "graphql": "^16.8.1",
     "moment": "^2.29.4",
     "ng-matero": "^17.0.2",
     "ngx-permissions": "^16.0.1",
@@ -42,9 +45,7 @@
     "rxjs": "~7.8.0",
     "screenfull": "^6.0.2",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3",
-    "@apollo/client": "^3.0.0",
-    "graphql": "^16"
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.2.2",
@@ -55,6 +56,10 @@
     "@angular-eslint/template-parser": "^17.2.0",
     "@angular/cli": "^17.2.2",
     "@angular/compiler-cli": "^17.2.0",
+    "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/typescript": "^4.0.6",
+    "@graphql-codegen/typescript-apollo-angular": "^4.0.0",
+    "@graphql-codegen/typescript-operations": "^4.2.0",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
