--- a/Ticketing/API/Ticketing.GraphQL.Web/Ticketing.GraphQL.Web.csproj
+++ b/Ticketing/API/Ticketing.GraphQL.Web/Ticketing.GraphQL.Web.csproj
@@ -25,4 +25,8 @@
         <PackageReference Include="Stripe.net" Version="43.16.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Migrations\" />
+    </ItemGroup>
+
 </Project>
