--- a/Ticketing/API/Ticketing.GraphQL.Web/Ticketing.GraphQL.Web.csproj
+++ b/Ticketing/API/Ticketing.GraphQL.Web/Ticketing.GraphQL.Web.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="HotChocolate.Data.EntityFramework" Version="13.9.0" />
         <PackageReference Include="HotChocolate.Types.Scalars" Version="13.9.0" />
         <PackageReference Include="Kralizek.Extensions.Configuration.AWSSecretsManager" Version="1.7.0" />
+        <PackageReference Include="MailKit" Version="4.4.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.2" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.2" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
@@ -22,6 +23,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.2" />
+        <PackageReference Include="MimeKit" Version="4.4.0" />
         <PackageReference Include="Stripe.net" Version="43.16.0" />
     </ItemGroup>
 
